* bug:MID-9300[] Secure schema usage in PostgresSQL (not using public schema).
* bug:MID-10278[] Fix non-clickable part of a button in Edit Schema popup panel.
* bug:MID-10513[] Fixed css issues with popup modal background in Safari.
* bug:MID-10410[] Better indication for failed tasks and their subtasks.
* bug:MID-10412[] Implemented configurable thresholds for task activities.

=== Other Improvements

* Implemented xrefv:/midpoint/reference/support-4.9/resources/attribute-caching/#_caching_passwords[shadow password caching], with the possibility of storing them in reversible encrypted form.
* Improved handling of xrefv:/midpoint/reference/support-4.9/resources/resource-configuration/schema-handling/volatility/[volatile shadow attributes].
* Update GUI views after changing of the archetype, that is used in the view. See bug:MID-9776[].
* Adding support for PKCE (Proof Key for Code Exchange) as additional security for OIDC authentication module. See bug:MID-10155[].
* Adding new configuration attribute for OIDC authentication module, that is used for ID Token signing algorithm. See xref:/midpoint/reference/security/authentication/flexible-authentication/modules/oidc/[Oidc Module].
* Apply the Web Content Accessibility Guidelines (WCAG) to all login pages and self-service pages. See bug:MID-9847[].
** Used 'honeypot' instead of captcha on self-registration and post-authentication pages to protect against spam bots.
* Improved the documentation on the resource configuration. See bug:MID-10176[].
* Allow volatility configuration per mapping through the Resource Wizard. See bug:MID-10170[].
* Change the CSS style of sub-containers in the vertical form panel to create a new object for reference. See bug:MID-10030[].
* Documentation of xref:/midpoint/reference/resources/shadow/purpose/[shadow purpose] was added. See bug:MID-10419[].

=== Other Bug Fixes

* Fixed "Couldn't get assignments conflicts" error occurring during Request access. See bug:MID-10124[].