@@ -100,8 +100,12 @@ class ScheduleNowHelper {
         }
     }
 
-    // experimental, todo revise the logic
     void scheduleWaitingTaskNow(TaskQuartzImpl task, OperationResult result) {
+        scheduleWaitingTaskNow(task, false, result);
+    }
+
+    // experimental, todo revise the logic
+    void scheduleWaitingTaskNow(TaskQuartzImpl task, boolean synchronizeTask, OperationResult result) {
         stateCheck(task.getSchedulingState() == TaskSchedulingStateType.WAITING,
                 "Task is not waiting: %s (%s)", task, task.getSchedulingState());
         try {
@@ -109,6 +113,11 @@ class ScheduleNowHelper {
             task.setExecutionAndSchedulingStateImmediate(
                     TaskExecutionStateType.RUNNABLE, TaskSchedulingStateType.READY,
                     TaskSchedulingStateType.WAITING, result);
+
+            if (synchronizeTask) {
+                task.synchronizeWithQuartz(result);
+            }
+
             localScheduler.addTriggerNowForTask(task, result);
         } catch (SchedulerException | ObjectNotFoundException | SchemaException | PreconditionViolationException e) {
             String message = "Waiting task " + task + " cannot be scheduled: " + e.getMessage();
