@@ -55,6 +55,7 @@ Overall, midPoint 4.9 is a major step from the past into the future.
 * bug:MID-10513[] Fixed css issues with popup modal background in Safari.
 * bug:MID-10410[] Better indication for failed tasks and their subtasks.
 * bug:MID-10412[] Implemented configurable thresholds for task activities.
+* bug:MID-10496[] Task doesn't start at next scheduled time.
 
 === Other Improvements
 
